--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.5.1-SNAPSHOT
+version=2201.5.1
 codeName=swan-lake
 
 ballerinaLangVersion=2201.5.0
@@ -73,7 +73,7 @@ persistToolVersion=0.3.0
 
 # Dev Tools
 devToolsVersion=1.0.0
-ballerinaCommandVersion=1.3.14
+ballerinaCommandVersion=1.3.15
 
 
 # GraphQL Tool
