Update OpenAPI version

--- a/gradle.properties
+++ b/gradle.properties
@@ -84,7 +84,7 @@ graphqlVersion=0.5.1
 protocToolVersion=0.1.0
 
 # OpenAPI Module
-openapiVersion=1.5.1-20230619-132500-cab0d62
+openapiVersion=1.5.1
 
 # AsyncAPI Module
 asyncapiVersion=0.5.0
