--- a/gradle.properties
+++ b/gradle.properties
@@ -3,90 +3,90 @@ group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
 version=2201.7.0-SNAPSHOT
 codeName=swan-lake
-ballerinaLangVersion=2201.7.0-20230620-002600-40af2ec7
+ballerinaLangVersion=2201.7.0-20230622-064700-4a2dc6dd
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
-specVersion=2022R4
+specVersion=2023R1
 slf4jVersion=1.7.30
 balstdlibBranch=master
 
 # Stdlib Level 01
-stdlibConstraintVersion=1.2.0
-stdlibIoVersion=1.4.1
-stdlibJavaArraysVersion=1.2.3
+stdlibConstraintVersion=1.3.0-20230620-195700-ca941bc
+stdlibIoVersion=1.5.0-20230620-192100-29cf327
+stdlibJavaArraysVersion=1.3.0-20230620-192700-c836fd3
 stdlibRegexVersion=1.4.3
-stdlibTimeVersion=2.2.4
-stdlibUrlVersion=2.2.3
-stdlibXmldataVersion=2.5.0
-observeVersion=1.0.7
+stdlibTimeVersion=2.3.0-20230620-192500-12d3432
+stdlibUrlVersion=2.3.0-20230620-193100-90b6489
+stdlibXmldataVersion=2.6.0-20230620-192500-909c3b3
+observeVersion=1.1.0-20230620-193900-57e0c73
 stdlibMathVectorVersion=1.0.1
 
 
 # Stdlib Level 02
-stdlibCryptoVersion=2.3.1
-stdlibLogVersion=2.7.1
-stdlibOsVersion=1.6.0
-stdlibProtobufVersion=1.4.0
-stdlibRandomVersion=1.3.1
-stdlibTaskVersion=2.3.2
-stdlibXsltVersion=2.4.0
-observeInternalVersion=1.0.6
+stdlibCryptoVersion=2.4.0-20230620-202300-53ac3fb
+stdlibLogVersion=2.8.0-20230620-203000-74034d2
+stdlibOsVersion=1.7.0-20230620-202800-f75dd63
+stdlibProtobufVersion=1.5.0-20230620-202600-8d3ad44
+stdlibRandomVersion=1.4.0-20230620-162300-6c8d20e
+stdlibTaskVersion=2.4.0-20230620-204200-bd8329a
+stdlibXsltVersion=2.5.0-20230620-202700-3ea55e6
+observeInternalVersion=1.1.0-20230620-201800-18bbd1b
 
 # Stdlib Level 03
-stdlibCacheVersion=3.5.0
-stdlibFileVersion=1.7.1
-stdlibFtpVersion=2.7.1
-stdlibMimeVersion=2.7.1
-stdlibTcpVersion=1.7.1
-stdlibUdpVersion=1.7.1
-stdlibUuidVersion=1.5.1
+stdlibCacheVersion=3.6.0-20230620-211300-8e2e2da
+stdlibFileVersion=1.8.0-20230620-210800-e8f8123
+stdlibFtpVersion=2.8.0-20230620-214200-1f1f3d2
+stdlibMimeVersion=2.8.0-20230620-205000-a1e0453
+stdlibTcpVersion=1.8.0-20230622-075900-0fa3184
+stdlibUdpVersion=1.8.0-20230622-075900-2d3528e
+stdlibUuidVersion=1.6.0-20230620-211300-6fdbff8
 
 # Stdlib Level 04
-stdlibAuthVersion=2.8.0
-stdlibEmailVersion=2.7.1
-stdlibJwtVersion=2.8.0
-stdlibOAuth2Version=2.8.0
-stdlibYamlVersion=0.3.1-20230612-141800-3f686c6
-stdlibTomlVersion=0.3.1-20230609-180200-0462a55
+stdlibAuthVersion=2.9.0-20230620-221100-6b88179
+stdlibEmailVersion=2.8.0-20230620-221300-6012f69
+stdlibJwtVersion=2.9.0-20230620-221100-adcdde4
+stdlibOAuth2Version=2.9.0-20230620-214300-9df2b5a
+stdlibYamlVersion=0.4.0-20230621-093200-a851275
+stdlibTomlVersion=0.4.0-20230621-095100-aa7f98e
 stdlibEdiVersion=1.0.1
 
 # Stdlib Level 05
-stdlibHttpVersion=2.8.0
+stdlibHttpVersion=2.9.0-20230621-211000-3a0a7fa
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.8.0
-stdlibTransactionVersion=1.6.0
-stdlibWebsocketVersion=2.8.0
-stdlibWebsubVersion=2.8.0
-stdlibWebsubhubVersion=1.8.0
+stdlibGrpcVersion=1.9.0-20230622-103300-e35bf3c
+stdlibTransactionVersion=1.7.0-20230622-075500-ff15926
+stdlibWebsocketVersion=2.9.0-20230622-090900-c881396
+stdlibWebsubVersion=2.9.0-20230622-084100-c86e0c6
+stdlibWebsubhubVersion=1.9.0-20230622-083000-02e28c8
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.8.0
-stdlibSqlVersion=1.9.0
+stdlibGraphqlVersion=1.9.0-20230622-112800-0ade7bc
+stdlibSqlVersion=1.10.0-20230622-103500-ec74911
 
 # Stdlib Level 08
-stdlibPersistVersion=1.0.0
+stdlibPersistVersion=1.1.0-20230620-202500-81fc407
 
 # Persist Tool
-persistToolVersion=1.0.0
+persistToolVersion=1.1.0-20230622-120500-88996bc
 
 # Dev Tools
-devToolsVersion=1.1.0
+devToolsVersion=1.2.0-20230622-155200-329d876
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
 graphqlVersion=0.6.0
 
 # Protoc Tool
-protocToolVersion=0.1.1
+protocToolVersion=0.1.2-20230621-170600-536ee30
 
 # OpenAPI Module
-openapiVersion=1.7.0-20230601-171700-961d1f0
+openapiVersion=1.7.0-20230622-162600-20520d8
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
 
-c2cVersion=2.7.0
+c2cVersion=2.8.0-20230622-141400-8d9a68f
 
 dataMapperVersion=2.2.0
 
