--- a/gradle.properties
+++ b/gradle.properties
@@ -75,7 +75,7 @@ devToolsVersion=1.2.0-20230622-155200-329d876
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
-graphqlVersion=0.6.0
+graphqlVersion=0.6.1-20230627-121100-9406336
 
 # Protoc Tool
 protocToolVersion=0.1.2-20230621-170600-536ee30
