Add check to skip project-api tests if Asgadeo dev is not available

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2022R4
 slf4jVersion=1.7.30
 balstdlibBranch=master
+devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configuration
 
 # Stdlib Level 01
 stdlibConstraintVersion=1.2.0
