--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
 version=2201.6.1-SNAPSHOT
 codeName=swan-lake
-ballerinaLangVersion=2201.6.0
+ballerinaLangVersion=2201.6.1-20230704-214500-dccfe245
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2022R4
@@ -71,7 +71,7 @@ stdlibPersistVersion=1.0.0
 persistToolVersion=1.0.0
 
 # Dev Tools
-devToolsVersion=1.1.0
+devToolsVersion=1.1.1-20230705-123700-5588540
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
