Fix branch name error, clean md file for release

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -122,16 +122,21 @@ jobs:
       - name: Get Markdown file
         id: file-url
         env:
-          GITHUB_TOKEN: ${{ secrets.BALLERINA_BOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh repo view ballerina-platform/ballerina-dev-website --json url --jq '.clone_url'
-          gh api repos/ballerina-platform/ballerina-dev-website/contents/downloads/release-artifacts-verification.md -H 'Accept: application/vnd.github.v3.raw' > release_notes.md
-      - name: Update Markdown file
+          gh api repos/ballerina-platform/ballerina-dev-website/contents/downloads/verify-ballerina-artifacts.md -H 'Accept: application/vnd.github.v3.raw' > release_notes.md
+          sed -i '1,10d' release_notes.md
+      - name: Retrieve Branch
+        id: retrieve-branch
         run: |
           branchName=$(echo ${{ github.ref }} | cut -d'/' -f3)
+          echo "::set-output name=branchName::$branchName"
+      - name: Update Markdown file
+        run: |
           if ${{ github.event.inputs.isPreRelease }} == 'true'; then 
             echo "" > release_notes.md; 
-          else sed -i 's/{{ version }}/${{ steps.version-set.outputs.taggedVersion }}/g' release_notes.md; sed -i 's/{{ branch }}/$branchName/g' release_notes.md; fi
+          else sed -i 's/{{ version }}/${{ steps.version-set.outputs.taggedVersion }}/g' release_notes.md; sed -i 's/{{ branch }}/${{ steps.retrieve-branch.outputs.branchName }}/g' release_notes.md; fi
       - name: Read release notes from file
         id: release_notes
         uses: actions/github-script@v4
