--- a/gradle/javaProject.gradle
+++ b/gradle/javaProject.gradle
@@ -73,7 +73,7 @@ tasks.withType(JavaCompile) {
 }
 
 jacoco {
-    toolVersion = "0.8.6"
+    toolVersion = "0.8.10"
 }
 
 test {
@@ -94,7 +94,7 @@ test {
 }
 
 checkstyle {
-    toolVersion '7.8.2'
+    toolVersion '10.12.1'
     configFile rootProject.file("config/checkstyle/build/checkstyle.xml")
     configProperties = ["suppressionFile": rootProject.file("config/checkstyle/build/suppressions.xml")]
     checkstyleTest.enabled = true
@@ -127,4 +127,4 @@ jacocoTestReport {
 }
 
 checkstyleMain.dependsOn(":config:checkstyle:downloadMultipleFiles")
-
+checkstyleTest.dependsOn(":config:checkstyle:downloadMultipleFiles")
