--- a/gradle.properties
+++ b/gradle.properties
@@ -71,7 +71,7 @@ stdlibPersistVersion=1.0.0
 persistToolVersion=1.0.0
 
 # Dev Tools
-devToolsVersion=1.1.1-20230705-123700-5588540
+devToolsVersion=1.1.1
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
