--- a/gradle.properties
+++ b/gradle.properties
@@ -36,7 +36,7 @@ observeInternalVersion=1.1.0-20230620-201800-18bbd1b
 
 # Stdlib Level 03
 stdlibCacheVersion=3.6.0-20230620-211300-8e2e2da
-stdlibFileVersion=1.8.0-20230620-210800-e8f8123
+stdlibFileVersion=1.8.1
 stdlibFtpVersion=2.8.0-20230620-214200-1f1f3d2
 stdlibMimeVersion=2.8.0-20230620-205000-a1e0453
 stdlibTcpVersion=1.8.0-20230622-075900-0fa3184
