--- a/gradle.properties
+++ b/gradle.properties
@@ -63,7 +63,7 @@ stdlibWebsubVersion=2.9.0-20230622-084100-c86e0c6
 stdlibWebsubhubVersion=1.9.0-20230622-083000-02e28c8
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.9.0-20230622-112800-0ade7bc
+stdlibGraphqlVersion=1.9.1-20230713-142300-be8c3e2
 stdlibSqlVersion=1.10.0-20230622-103500-ec74911
 
 # Stdlib Level 08
@@ -77,7 +77,7 @@ devToolsVersion=1.2.0-20230622-155200-329d876
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
-graphqlVersion=0.6.0
+graphqlVersion=0.7.1-20230713-213500-3f0344c
 
 # Protoc Tool
 protocToolVersion=0.1.2-20230621-170600-536ee30
