--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
 version=2201.7.1-SNAPSHOT
 codeName=swan-lake
-ballerinaLangVersion=2201.7.0
+ballerinaLangVersion=2201.7.1-20230713-152800-8975a800
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2023R1
