Update ballerina custom JRE version

--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -415,7 +415,7 @@ task packageDistLinux(type: Zip) {
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies/${dependencyJREVersion}") {
+    into("${parentDir}/dependencies") {
         from "build/target/extracted-jre-linux"
         fileMode = 0755
     }
@@ -502,7 +502,7 @@ task packageDistMac(type: Zip) {
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies/${dependencyJREVersion}") {
+    into("${parentDir}/dependencies") {
         from "build/target/extracted-jre-macos"
         fileMode = 0755
     }
@@ -585,7 +585,7 @@ task packageDistMacArm(type: Zip) {
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies/${dependencyJREVersion}") {
+    into("${parentDir}/dependencies") {
         from "build/target/extracted-jre-macos-arm"
         fileMode = 0755
     }
@@ -668,7 +668,7 @@ task packageDistWindows(type: Zip) {
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies/${dependencyJREVersion}") {
+    into("${parentDir}/dependencies") {
         from "build/target/extracted-jre-windows"
         fileMode = 0755
     }
