--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.7.0-SNAPSHOT
+version=2201.8.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.0-20230718-003000-d7ad7106
-ballerinaJreVersion=1.1.0
-dependencyJREVersion=jdk-11.0.18+10-jre
+ballerinaLangVersion=2201.7.0-20230702-003400-fc7f53c6
+ballerinaJreVersion=2.0.0
+dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
 slf4jVersion=1.7.30
 balstdlibBranch=master
@@ -63,7 +63,7 @@ stdlibWebsubVersion=2.9.0-20230622-084100-c86e0c6
 stdlibWebsubhubVersion=1.9.0-20230622-083000-02e28c8
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.9.1-20230713-142300-be8c3e2
+stdlibGraphqlVersion=1.9.0-20230622-112800-0ade7bc
 stdlibSqlVersion=1.10.0-20230622-103500-ec74911
 
 # Stdlib Level 08
@@ -77,7 +77,7 @@ devToolsVersion=1.2.0-20230622-155200-329d876
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
-graphqlVersion=0.7.1-20230713-213500-3f0344c
+graphqlVersion=0.6.0
 
 # Protoc Tool
 protocToolVersion=0.1.2-20230621-170600-536ee30
