--- a/cache-generator/build.gradle
+++ b/cache-generator/build.gradle
@@ -73,6 +73,8 @@ shadowJar {
 }
 
 compileJava {
+    sourceCompatibility = 17
+    targetCompatibility = 17
     doFirst {
         options.compilerArgs = [
                 '--module-path', classpath.asPath,
