Update stdlib versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -37,33 +37,33 @@ observeInternalVersion=1.1.0-20230620-201800-18bbd1b
 # Stdlib Level 03
 stdlibCacheVersion=3.6.0-20230620-211300-8e2e2da
 stdlibFileVersion=1.8.0-20230620-210800-e8f8123
-stdlibFtpVersion=2.8.0-20230620-214200-1f1f3d2
-stdlibMimeVersion=2.8.0-20230620-205000-a1e0453
+stdlibFtpVersion=2.8.1-20230718-100900-aaef72b
+stdlibMimeVersion=2.8.1-20230719-164700-d952fac
 stdlibTcpVersion=1.8.0-20230622-075900-0fa3184
 stdlibUdpVersion=1.8.0-20230622-075900-2d3528e
 stdlibUuidVersion=1.6.0-20230620-211300-6fdbff8
 
 # Stdlib Level 04
-stdlibAuthVersion=2.9.0-20230620-221100-6b88179
-stdlibEmailVersion=2.8.0-20230620-221300-6012f69
+stdlibAuthVersion=2.9.1-20230718-095100-13cd0c9
+stdlibEmailVersion=2.8.1-20230720-093800-a2c55d0
 stdlibJwtVersion=2.9.0-20230620-221100-adcdde4
 stdlibOAuth2Version=2.9.0-20230620-214300-9df2b5a
-stdlibYamlVersion=0.4.0-20230621-093200-a851275
+stdlibYamlVersion=0.4.1-20230720-093500-3b33719
 stdlibTomlVersion=0.4.0-20230621-095100-aa7f98e
-stdlibEdiVersion=1.0.1
+stdlibEdiVersion=1.0.6-20230720-105300-db5a2fb
 
 # Stdlib Level 05
-stdlibHttpVersion=2.9.0-20230621-211000-3a0a7fa
+stdlibHttpVersion=2.9.1-20230712-161400-d16a019
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.9.0-20230622-103300-e35bf3c
-stdlibTransactionVersion=1.7.0-20230622-075500-ff15926
-stdlibWebsocketVersion=2.9.0-20230622-090900-c881396
-stdlibWebsubVersion=2.9.0-20230622-084100-c86e0c6
-stdlibWebsubhubVersion=1.9.0-20230622-083000-02e28c8
+stdlibGrpcVersion=1.9.1-20230720-093600-e476d75
+stdlibTransactionVersion=1.7.0-20230720-002600-26a6573
+stdlibWebsocketVersion=2.9.1-20230720-093600-dd55653
+stdlibWebsubVersion=2.9.1-20230720-002500-d909581
+stdlibWebsubhubVersion=1.9.1-20230720-093500-d98cb16
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.9.0-20230622-112800-0ade7bc
+stdlibGraphqlVersion=1.9.1-20230720-122900-2eae4be
 stdlibSqlVersion=1.10.0-20230622-103500-ec74911
 
 # Stdlib Level 08
