--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -284,9 +284,9 @@ task combineDocs(type: Exec) {
 task packageDist(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina Tools Distribution Assembly'
-    archiveBaseName = "${distributionName}"
-    ext { parentDir = "${archiveBaseName}-${shortVersion}" }
-    archiveFileName = "${archiveBaseName}-${shortVersion}.zip"
+    baseName = "${distributionName}"
+    ext { parentDir = "${baseName}-${shortVersion}" }
+    archiveFileName = "${baseName}-${shortVersion}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
     into("${parentDir}") {
@@ -327,8 +327,8 @@ task packageDist(type: Zip) {
 task packageDistZip(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina Distribution Assembly'
-    archiveBaseName = "${distributionName}-${version}"
-    ext { parentDir = "${archiveBaseName}-${codeName}" }
+    baseName = "${distributionName}-${version}"
+    ext { parentDir = "${baseName}-${codeName}" }
     archiveFileName = "${distributionName}-${version}-${codeName}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
@@ -410,8 +410,8 @@ task packageDistZip(type: Zip) {
 task packageDistLinux(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina Linux Distribution Assembly'
-    archiveBaseName = "${distributionName}-${version}"
-    ext { parentDir = "${archiveBaseName}-${codeName}-linux" }
+    baseName = "${distributionName}-${version}"
+    ext { parentDir = "${baseName}-${codeName}-linux" }
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
@@ -497,8 +497,8 @@ task packageDistLinux(type: Zip) {
 task packageDistMac(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina MacOS Distribution Assembly'
-    archiveBaseName = "${distributionName}-${version}"
-    ext { parentDir = "${archiveBaseName}-${codeName}-macos" }
+    baseName = "${distributionName}-${version}"
+    ext { parentDir = "${baseName}-${codeName}-macos" }
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
@@ -580,8 +580,8 @@ task packageDistMac(type: Zip) {
 task packageDistMacArm(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina MacOS-ARM Distribution Assembly'
-    archiveBaseName = "${distributionName}-${version}"
-    ext { parentDir = "${archiveBaseName}-${codeName}-macos-arm" }
+    baseName = "${distributionName}-${version}"
+    ext { parentDir = "${baseName}-${codeName}-macos-arm" }
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
@@ -663,8 +663,8 @@ task packageDistMacArm(type: Zip) {
 task packageDistWindows(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina Windows Distribution Assembly'
-    archiveBaseName = "${distributionName}-${version}"
-    ext { parentDir = "${archiveBaseName}-${codeName}-windows" }
+    baseName = "${distributionName}-${version}"
+    ext { parentDir = "${baseName}-${codeName}-windows" }
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
@@ -1475,6 +1475,7 @@ packageDist.dependsOn combineDocs
 packageDist.dependsOn generateCache
 packageDistZip.dependsOn packageDist
 packageDistLinux.dependsOn packageDistZip
+packageDistLinux.dependsOn unzipDistForTests
 packageDistMac.dependsOn packageDistLinux
 packageDistMacArm.dependsOn packageDistMac
 packageDistWindows.dependsOn packageDistMacArm
