--- a/gradle.properties
+++ b/gradle.properties
@@ -19,19 +19,19 @@ stdlibRegexVersion=1.4.3
 stdlibTimeVersion=2.3.0
 stdlibUrlVersion=2.3.0
 stdlibXmldataVersion=2.6.0
-observeVersion=1.1.0
+observeVersion=1.1.0-20230622-105700-f92eb77
 stdlibMathVectorVersion=1.0.1
 
 
 # Stdlib Level 02
 stdlibCryptoVersion=2.4.0
-stdlibLogVersion=2.8.0
+stdlibLogVersion=2.8.1-20230718-085900-36c385c
 stdlibOsVersion=1.7.0
 stdlibProtobufVersion=1.5.0
 stdlibRandomVersion=1.4.0
 stdlibTaskVersion=2.4.0
 stdlibXsltVersion=2.5.0
-observeInternalVersion=1.1.0
+observeInternalVersion=1.1.0-20230622-114200-c6b7282
 
 # Stdlib Level 03
 stdlibCacheVersion=3.6.0
@@ -52,12 +52,12 @@ stdlibTomlVersion=0.4.0
 stdlibEdiVersion=1.0.1
 
 # Stdlib Level 05
-stdlibHttpVersion=2.9.0
+stdlibHttpVersion=2.9.1-20230712-161400-d16a019
 
 # Stdlib Level 06
 stdlibGrpcVersion=1.9.0
 stdlibTransactionVersion=1.7.0
-stdlibWebsocketVersion=2.9.0
+stdlibWebsocketVersion=2.9.1-20230718-133100-1515098
 stdlibWebsubVersion=2.9.0
 stdlibWebsubhubVersion=1.9.0
 
@@ -76,7 +76,7 @@ devToolsVersion=1.2.0
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
-graphqlVersion=0.7.0
+graphqlVersion=0.7.1-20230720-140900-c92185d
 
 # Protoc Tool
 protocToolVersion=0.1.2
