Add Language Server Simulator

--- a/gradle.properties
+++ b/gradle.properties
@@ -93,3 +93,10 @@ c2cVersion=2.8.0-20230622-141400-8d9a68f
 dataMapperVersion=2.2.0
 
 installerVersion=69c0a0e-9c6a-4062-ae1e-2209c25e4f51
+
+# Language Server Simulator
+eclipseLsp4jVersion=0.15.0
+eclipseLsp4jJsonrpcVersion=0.15.0
+slf4jJdk14Version=1.7.26
+gsonVersion=2.9.1
+slf4jApiVersion=1.7.s26
