Update OpenAPI version

--- a/gradle.properties
+++ b/gradle.properties
@@ -83,7 +83,7 @@ graphqlVersion=0.7.1-20230720-140900-c92185d
 protocToolVersion=0.1.2
 
 # OpenAPI Module
-openapiVersion=1.7.0
+openapiVersion=1.8.0-20230721-131400-04439f8
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
