--- a/gradle.properties
+++ b/gradle.properties
@@ -56,11 +56,11 @@ stdlibEdiVersion=1.0.1
 stdlibHttpVersion=2.9.1-20230712-161400-d16a019
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.9.0
-stdlibTransactionVersion=1.7.0
+stdlibGrpcVersion=1.9.1-20230720-093600-e476d75
+stdlibTransactionVersion=1.7.0-20230724-121800-61fea60
 stdlibWebsocketVersion=2.9.1-20230718-133100-1515098
-stdlibWebsubVersion=2.9.0
-stdlibWebsubhubVersion=1.9.0
+stdlibWebsubVersion=2.9.1-20230720-002500-d909581
+stdlibWebsubhubVersion=1.9.1-20230720-093500-d98cb16
 
 # Stdlib Level 07
 stdlibGraphqlVersion=1.9.1-20230720-134000-2eae4be
