--- a/.github/workflows/language_server_simulator_nballerina.yml
+++ b/.github/workflows/language_server_simulator_nballerina.yml
@@ -66,10 +66,16 @@ jobs:
           name: Leak_Suspects-${{ matrix.branch }}
           path: 'dump_Leak_Suspects.zip'
 
-#      - name: Notify failure
-#        if: failure()
-#        run: |
-#          curl \
-#          -X POST 'https://chat.googleapis.com/v1/spaces/${{secrets.NOTIFICATIONS_CHAT_ID}}/messages?key=${{secrets.NOTIFICATIONS_CHAT_KEY}}&token=${{secrets.NOTIFICATIONS_CHAT_TOKEN}}' \
-#          --header 'Content-Type: application/json' \
-#          -d '{"text": "*language server simulator failure in ${{ matrix.branch }}* (skipped generators: ${{ matrix.skipGenerators }}) \nPlease \n visit <https://github.com/ballerina-platform/ballerina-lang/actions/runs/${{github.run_id}}|the LS simulator run> for more information"}'
+      - name: Notify failure
+        if: failure()
+        run: |
+          curl -X POST \
+          'https://api.github.com/repos/ballerina-platform/ballerina-release/dispatches' \
+          -H 'Accept: application/vnd.github.v3+json' \
+          -H 'Authorization: Bearer ${{ secrets.BALLERINA_BOT_TOKEN }}' \
+          --data "{
+            \"event_type\": \"notify-simulator-failure\",
+            \"client_payload\": {
+              \"branch\": \"master\"
+            }
+          }"
