--- a/.github/workflows/language_server_simulator_fhir.yml
+++ b/.github/workflows/language_server_simulator_fhir.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch: [ "master" ]
-        skipGenerators: [ ""]
+        branch: [ "master", "2201.8.x", "2201.7.x" ]
+        skipGenerators: [ "" ]
 
     steps:
       - name: Checkout Repository
@@ -76,6 +76,7 @@ jobs:
           --data "{
             \"event_type\": \"notify-simulator-failure\",
             \"client_payload\": {
-              \"branch\": \"master\"
+              \"branch\": \"${{ matrix.branch }}\"
             }
           }"
+          
