--- a/gradle.properties
+++ b/gradle.properties
@@ -37,7 +37,7 @@ observeInternalVersion=1.1.0
 # Stdlib Level 03
 stdlibCacheVersion=3.6.0
 stdlibFileVersion=1.8.0
-stdlibFtpVersion=2.8.0
+stdlibFtpVersion=2.8.1-20230718-100900-aaef72b
 stdlibMimeVersion=2.8.0
 stdlibTcpVersion=1.8.0
 stdlibUdpVersion=1.8.0
@@ -45,12 +45,12 @@ stdlibUuidVersion=1.6.0
 
 # Stdlib Level 04
 stdlibAuthVersion=2.9.0
-stdlibEmailVersion=2.8.0
+stdlibEmailVersion=2.8.1-20230720-093800-a2c55d0
 stdlibJwtVersion=2.9.0
 stdlibOAuth2Version=2.9.0
-stdlibYamlVersion=0.4.0
+stdlibYamlVersion=0.4.1-20230720-093500-3b33719
 stdlibTomlVersion=0.4.0
-stdlibEdiVersion=1.0.1
+stdlibEdiVersion=1.0.6-20230720-105300-db5a2fb
 
 # Stdlib Level 05
 stdlibHttpVersion=2.9.1-20230712-161400-d16a019
